--- a/package.json
+++ b/package.json
@@ -6,8 +6,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@inertiajs/inertia": "^0.11.0",
+        "@inertiajs/inertia-vue3": "^0.6.0",
+        "@inertiajs/progress": "^0.2.7",
+        "@tailwindcss/forms": "^0.5.2",
+        "@tailwindcss/typography": "^0.5.2",
+        "@vitejs/plugin-vue": "^3.2.0",
+        "autoprefixer": "^10.4.7",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.5",
-        "vite": "^4.0.0"
+        "lodash": "^4.17.19",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.0",
+        "vite": "^3.0.0",
+        "vue": "^3.2.31"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^1.0.9",
+        "vue": "^3.2.36"
     }
 }
